Camino only - Bug 344982: Fix and expose 'Enable plug-ins' preference. Patch by Chris Lawson <bugzilla@chrislawson.net> r=kreeger sr=smorgan