camino/PreferencePanes/WebFeatures/WebFeatures.h
@@ -51,6 +51,7 @@ class nsISupportsArray;
 {
   IBOutlet NSButton* mEnableJS;
   IBOutlet NSButton* mEnableJava;
+  IBOutlet NSButton* mEnablePlugins;
 
   IBOutlet NSButton *mEnablePopupBlocking;
   IBOutlet NSButton *mEnableAdBlocking;
@@ -74,6 +75,7 @@ class nsISupportsArray;
 
 -(IBAction) clickEnableJS:(id)sender;
 -(IBAction) clickEnableJava:(id)sender;
+-(IBAction) clickEnablePlugins:(id)sender;
 
 -(IBAction) clickEnablePopupBlocking:(id)sender;
 -(IBAction) clickEnableAdBlocking:(id)sender;
